chat overflow fix

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -109,7 +109,8 @@ body {
 }
 
 .auto-overflow {
-	overflow: auto;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .fill-under-name-tag {
